--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Pillow==2.5.3
 dj-database-url==0.3.0
 dj-static==0.0.6
 django-markdown-deux==1.0.4
+django-taggit==0.12.1
 markdown2==2.2.2
 static3==0.5.1
 wsgiref==0.1.2
