--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Django==1.7
-MySQL-python==1.2.5
-Pillow==2.5.3
 dj-database-url==0.3.0
 dj-static==0.0.6
+Django==1.7
 django-markdown-deux==1.0.4
-django-taggit==0.12.1
+django-taggit==0.12.2
 markdown2==2.2.2
+MySQL-python==1.2.5
+Pillow==2.5.3
 static3==0.5.1
-wsgiref==0.1.2
+wheel==0.24.0
