--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-markdown-deux==1.0.4
 django-private-media==0.1.3
 django-taggit==0.16.4
 markdown2==2.2.2
+mutagen==1.31
 MySQL-python==1.2.5
 Pillow==2.5.3
 sorl-thumbnail==12.3
