--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.8.4
+django-jquery==1.9.1
 django-markdown-deux==1.0.4
 django-private-media==0.1.3
 django-taggit==0.16.4
