--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,16 @@ Django==1.9.2
 django-jquery==1.9.1
 django-private-media==0.1.3
 django-taggit==0.18.0
+flickrapi==2.1.2
 Markdown==2.6.5
 markdown2==2.2.2
 mutagen==1.31
 MySQL-python==1.2.5
+oauthlib==1.0.3
 Pillow==2.5.3
+requests==2.9.1
+requests-oauthlib==0.6.1
+requests-toolbelt==0.6.0
+six==1.10.0
 sorl-thumbnail==12.3
 wheel==0.24.0
