--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
+certifi==2019.3.9
+chardet==3.0.4
 Django==1.10.5
 django-cors-headers==1.1.0
 django-jquery==1.9.1
 django-taggit==0.18.0
-flickrapi==2.1.2
+flickrapi==2.4.0
+idna==2.8
 Markdown==2.6.5
 markdown2==2.2.2
 mutagen==1.31
 MySQL-python==1.2.5
-oauthlib==1.0.3
+oauthlib==3.0.1
 Pillow==2.5.3
-requests==2.9.1
-requests-oauthlib==0.6.1
-requests-toolbelt==0.6.0
-six==1.10.0
+requests==2.21.0
+requests-oauthlib==1.2.0
+requests-toolbelt==0.9.1
+six==1.12.0
 sorl-thumbnail==12.3
+urllib3==1.24.1
