--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 certifi==2019.3.9
 chardet==3.0.4
-Django==1.10.5
+Django==1.11.20
 django-cors-headers==1.1.0
 django-jquery==1.9.1
 django-taggit==0.18.0
@@ -12,6 +12,7 @@ mutagen==1.31
 MySQL-python==1.2.5
 oauthlib==3.0.1
 Pillow==6.0.0
+pytz==2019.1
 requests==2.21.0
 requests-oauthlib==1.2.0
 requests-toolbelt==0.9.1
