--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ idna==2.8
 Markdown==2.6.5
 markdown2==2.3.7
 mutagen==1.31
-MySQL-python==1.2.5
+mysqlclient==1.4.6
 oauthlib==3.0.1
 Pillow==6.0.0
 pytz==2019.1
