--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 certifi==2019.3.9
 chardet==3.0.4
+charset-normalizer==2.0.10
 Django==1.11.29
 django-cors-headers==1.1.0
 django-jquery==1.9.1
@@ -13,7 +14,7 @@ mysqlclient==2.0.1
 oauthlib==3.0.1
 Pillow==8.0.1
 pytz==2019.1
-requests==2.21.0
+requests==2.27.1
 requests-oauthlib==1.2.0
 requests-toolbelt==0.9.1
 six==1.12.0
