--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "gulp": "4.0.2",
     "gulp-hash": "4.2.2",
-    "gulp-sass": "4.1.0"
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.48.0"
   }
 }
